print only css class

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
+.print-only {
+  display: none;
+}
+
 
 @media print {
   .no-print, .no-print * {
     display: none !important
+  }
+
+  .print-only {
+    display: initial
   }
 }
