--- a/src/app/bingo/preview/page.module.css
+++ b/src/app/bingo/preview/page.module.css
@@ -14,6 +14,10 @@
         size: landscape;
     }
 
+    .bingoTitle {
+        margin-top: 0;
+    }
+
     .bingoCard {
         width: 100%;
         height: 100%;
