--- a/src/app/bingo/preview/page.module.css
+++ b/src/app/bingo/preview/page.module.css
@@ -3,23 +3,13 @@
     text-align: center;
 }
 
-.bingoCard {
-    margin: 20px auto;
-    width: 75%;
-    aspect-ratio: 9/4;
-}
-
 @media print {
     @page {
         size: landscape;
+        orientation: landscape;
     }
 
     .bingoTitle {
         margin-top: 0;
-    }
-
-    .bingoCard {
-        width: 100%;
-        height: 100%;
     }
 }
